[package]
name = "umpirebug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.13", default-features = false, features = ["autotune", "fusion", "metrics", "train", "tui", "wgpu"] }
num-traits = "0.2.18"
